# thrive-clinical

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierrc  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  babel.config.json  docker-compose.docs.yml  docker-compose.yml  index.html  manage.py  package-lock.json  package.json  pyproject.toml  static-analysis.datadog.yml  tsconfig.json  tsconfig.test.json  vitest.config.ts
.claude/: settings.local.json
.github/: CODEOWNERS  copilot-instructions.md  pull_request_template.md  renovate.json
.github/workflows/: cd.yml  ci-jira-check.yml  ci.yml  html-lint.yml  run-build.yml  run-deploy.yml  run-lint.yml  run-smoke-test.yml  run-test.yml
config/: asgi.py  logging.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
dashboard/: index.html
docker/: entrypoint  start  start_worker
docs/: Makefile  conf.py  content-security-policy.md  email.md  howto.rst  index.rst  javascript.md  make.bat  permissions.md  typing.md  users.rst
docs/personal-health-connect/: FEATURE_GAP_ANALYSIS.md  README.md  RELEASES_0_TO_2_ROADMAP.md
docs/product/: README.md
docs/product/features/: README.md
docs/product/prds/: personal_summaries_prd.md
docs/product/research/: README.md
docs/product/strategy/: README.md  clinical-product-vision.md  executive-summary.md  personal-product-vision.md  product-strategy.md  release-plan.md  user-personas-clinical.md  user-personas-patient.md
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
patient-details/: index copy.html  index-single.html  index-tabs.html  index.html
sandwich/: conftest.py
sandwich/bread/: README.md  apps.py  urls.py
sandwich/bread/migrations/: 0001_initial.py  0002_patient_organization.py  0003_alter_patient_date_of_birth.py
sandwich/bread/models/: __init__.py  abstract.py  encounter.py  organization.py  patient.py
sandwich/bread/views/: patient.py
sandwich/core/: README.md  admin.py  apps.py  conftest.py  context_processors.py  context_processors_test.py  decorators.py  eventstream.py  factories.py  finders.py  forms.py  forms_test.py  inputs.py  object_permissions_test.py  permissioned_views_test.py  tasks.py  translation.py  types.py  urls.py  urls_test.py  widgets.py  widgets_test.py
sandwich/core/admin/: __init__.py  consent.py  email.py  entity.py  fact.py  list_preference.py  organization.py  organization_verification.py  patient.py  predicate.py  summary.py  summary_template.py  summary_template_fixtures.py  template.py
sandwich/core/factories/: condition.py  consent.py  encounter.py  errors.py  fact.py  fact_test.py  form.py  form_submission.py  health_record.py  immunization.py  invitation.py  organization.py  patient.py  personal_summary.py  practitioner.py  submission.py  summary.py  summary_template.py  task.py  template.py
sandwich/core/fixtures/: README.md  entity_allergy_intolerance.json  entity_condition.json  entity_immunization.json  entity_medication.json  entity_observation.json  entity_procedure.json  form_health_history_demo.json  form_health_history_simple.json  form_intake.json  form_pratt.json  organization.json  summarytemplate_health_history_demo.json  summarytemplate_health_history_simple.json  template.json
sandwich/core/management/: types.py
sandwich/core/middleware/: __init__.py  consent.py  consent_test.py  timezone.py
sandwich/core/migrations/: 0001_initial.py  0002_initial.py  0002_task.py  0003_encounter_ended_at_task_ended_at.py  0003_fts_setup.py  0003_patient_search_vector_and_more.py  0004_add_fts_triggers.py  0004_invitation.py  0005_broken_will_revert.py  0005_entity.py  0005_invitation_accepted_at.py  0006_predicate.py  0007_alter_invitation_token.py  0007_template.py  0008_consent.py  0009_document.py  0010_alter_encounter_status_alter_invitation_status_and_more.py  0010_dob_required.py  0011_organization_verification_type_and_more.py  0012_organization_slug.py  0013_alter_encounter_id_alter_formiosubmission_id_and_more.py  0013_alter_organization_patient_statuses.py  0014_email.py  0014_patient_province.py  0015_email.py  0015_update_templates.py  0016_alter_consent_policy.py  0016_email.py  0017_email_and_more.py  0018_alter_email_to.py  0019_alter_document_encounter.py  (+79 more)
sandwich/fixtures/: default.py  knowledge_graph.py  other.py  patient.py  webpack.py
sandwich/patients/: README.md  apps.py  urls.py  urls_test.py
sandwich/providers/: README.md  apps.py  urls.py  urls_test.py
sandwich/templates/: 403.html  403_csrf.html  404.html  500.html  base.html  base_left_nav.html  base_print.html  base_top_nav.html
sandwich/users/: README.md  adapters.py  adapters_test.py  admin.py  admin_test.py  apps.py  factories.py  forms.py  forms_test.py  managers_test.py  models.py  models_test.py  urls.py  urls_test.py  views.py  views_test.py
scripts/: check_version.py  connect.sh  deploy.sh  dev.sh  list_crispy_tailwind_classes.sh  setup.sh  smoke_test.py
settings/: account-notifications.html  account-security.html  account-settings.html  automations.html  custom-automation.html  custom-fields.html  form-templates.html  new-automation.html  new-form.html  new-summary-template.html  organization-settings.html  send-form-automation.html  send-reminders-automation.html  summary-templates.html  update-worklist-automation.html  worklist-preferences.html
shared/: command-palette.js  encounter-header.js  encounter-slideout.js  global-header.js  list-preferences.js  navigation.js  status-chip.js  styles.css  timeline.css  timeline.js  utils.js
webpack/: README.md  common.config.cjs  common.config.js  dev.config.cjs
(+637 files in other folders)
